--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -1,6 +1,6 @@
 .title-block {
   background-image: linear-gradient(to right, #FFFFFF, #00B9F2, #019CE0, #0C7ECF, #1661BE);
-  height: 50px;
+  height: auto;
   text-align: center;
   vertical-align: middle;
 }
@@ -8,5 +8,4 @@
 .title-text {
   margin: 0px;
   font-size: xx-large;
-  padding-top: 6px;
 }
