added ngrx store

--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -1,7 +1,7 @@
 <mat-card class="card-container mat-elevation-z8" id="bookcard">
   <div fxLayout="row" fxLayout.xs="column">
     <div fxFlex="40" class="content-center-aligned">
-      <img id="image" [src]="book.image" height="100px" width="100px" />
+      <img id="image" [src]="base64Image" height="100px" width="100px" />
     </div>
     <div fxFlex="60" class="content-center-aligned">
       <div id="title">
