--- a/src/app/book-store/book-store.component.html
+++ b/src/app/book-store/book-store.component.html
@@ -1,17 +1,17 @@
-<div style="border: 1px solid black; padding: 10px;">
+<div class="book-store-container">
 
   <div style="width: 100%;">
     <div fxLayout="col">
-      <div fxFlex="50" style="text-align: center;">
-        <span style="font-size: large;">Title</span>
+      <div fxFlex="50" class="sortby-title">
+        <span>Title</span>
         <span (click)="toggleSort('title')">
           <img *ngIf="titleSortStatus == 1" src="../../assets/sort-solid.svg" height="15px" width="15px"/>
           <img *ngIf="titleSortStatus == 2" src="../../assets/sort-down-solid.svg" height="15px" width="15px"/>
           <img *ngIf="titleSortStatus == 3" src="../../assets/sort-up-solid.svg" height="15px" width="15px"/>
         </span>
       </div>
-      <div fxFlex="50" style="text-align: center;">
-        <span style="font-size: large;">Votes</span>
+      <div fxFlex="50" class="sortby-title">
+        <span>Votes</span>
         <span (click)="toggleSort('votes')">
           <img *ngIf="votesSortStatus == 1" src="../../assets/sort-solid.svg" height="15px" width="15px"/>
           <img *ngIf="votesSortStatus == 2" src="../../assets/sort-down-solid.svg" height="15px" width="15px"/>
